--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@
 exclude: "^dist/.*$"
 repos:
   - repo: https://github.com/commitizen-tools/commitizen
-    rev: v4.0.0
+    rev: v3.29.1
     hooks:
       - id: commitizen
 
@@ -36,25 +36,25 @@ repos:
           - --markdown-linebreak-ext=md
       - id: check-added-large-files
 
-    - repo: https://github.com/compilerla/conventional-pre-commit
-      rev: v3.6.0
-      hooks:
-          - id: conventional-pre-commit
-            args:
-                - build
-                - chore
-                - ci
-                - docs
-                - feat
-                - fix
-                - perf
-                - refactor
-                - revert
-                - style
-                - test
-                - bump
-            stages:
-                - commit-msg
+  - repo: https://github.com/compilerla/conventional-pre-commit
+    rev: v3.6.0
+    hooks:
+      - id: conventional-pre-commit
+        args:
+          - build
+          - chore
+          - ci
+          - docs
+          - feat
+          - fix
+          - perf
+          - refactor
+          - revert
+          - style
+          - test
+          - bump
+        stages:
+          - commit-msg
 
   - repo: https://github.com/Lucas-C/pre-commit-hooks
     rev: v1.5.5
@@ -73,7 +73,7 @@ repos:
           - commit-msg
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.43.0
+    rev: v0.42.0
     hooks:
       - id: markdownlint
         args:
@@ -96,10 +96,10 @@ repos:
       - id: fix-ligatures
       - id: forbid-bidi-controls
 
-    - repo: https://github.com/zricethezav/gitleaks
-      rev: v8.21.0
-      hooks:
-          - id: gitleaks
+  - repo: https://github.com/zricethezav/gitleaks
+    rev: v8.21.0
+    hooks:
+      - id: gitleaks
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: "v4.0.0-alpha.8"
@@ -110,19 +110,20 @@ repos:
           - "prettier-plugin-multiline-arrays@3.0.6"
         exclude: "^dist/.*$"
 
-    - repo: https://github.com/pre-commit/mirrors-eslint
-      rev: 'v9.12.0' # Use the sha / tag you want to point at
-      hooks:
-          - id: eslint
-            files: \.[jt]sx?$
-            additional_dependencies:
-                - eslint@9.5.0
-                - eslint-plugin-jest@28.6.0
-    - repo: https://github.com/fsfe/reuse-tool
-      rev: 'v4.0.3'
-      hooks:
-          - id: reuse
-    - repo: https://github.com/renovatebot/pre-commit-hooks
-      rev: 38.126.1
-      hooks:
-          - id: renovate-config-validator
+  - repo: https://github.com/pre-commit/mirrors-eslint
+    rev: "v9.12.0" # Use the sha / tag you want to point at
+    hooks:
+      - id: eslint
+        files: \.[jt]sx?$
+        additional_dependencies:
+          - eslint@9.5.0
+          - eslint-plugin-jest@28.6.0
+  - repo: https://github.com/fsfe/reuse-tool
+    rev: "v4.0.3"
+    hooks:
+      - id: reuse
+  - repo: https://github.com/renovatebot/pre-commit-hooks
+    rev: 38.122.0
+    hooks:
+      - id: renovate-config-validator
+        language_version: 20.18.0
