--- a/.github/workflows/docusaurus-deploy.yaml
+++ b/.github/workflows/docusaurus-deploy.yaml
@@ -18,6 +18,10 @@ jobs:
         with:
           fetch-depth: 0
 
+      - uses: pnpm/action-setup@fe02b34f77f8bc703788d5817da081398fad5dd2 # v4.0.0
+        with:
+          run_install: false
+
       - uses: actions/setup-node@v4
         with:
           node-version: 18
@@ -27,7 +31,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Build website
-        run: yarn build
+        run: pnpm build
 
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
