--- a/docs/package.json
+++ b/docs/package.json
@@ -14,6 +14,8 @@
     "dependencies": {
         "@docusaurus/core": "3.6.3",
         "@docusaurus/preset-classic": "3.6.3",
+        "@docusaurus/core": "3.6.2",
+        "@docusaurus/preset-classic": "3.6.2",
         "@mdx-js/react": "^3.0.0",
         "clsx": "^2.0.0",
         "prism-react-renderer": "^2.3.0",
@@ -24,7 +26,10 @@
         "@docusaurus/module-type-aliases": "3.6.3",
         "@docusaurus/tsconfig": "3.6.3",
         "@docusaurus/types": "3.6.3",
-        "typescript": "5.7.2"
+        "typescript": "5.7.2""@docusaurus/module-type-aliases": "3.6.2",
+        "@docusaurus/tsconfig": "3.6.2",
+        "@docusaurus/types": "3.6.2",
+        "typescript": "5.6.3"
     },
     "engines": {
         "node": ">=18.0"
