--- a/docs/package.json
+++ b/docs/package.json
@@ -12,8 +12,8 @@
         ]
     },
     "dependencies": {
-        "@docusaurus/core": "3.6.3",
-        "@docusaurus/preset-classic": "3.6.3",
+        "@docusaurus/core": "3.5.2",
+        "@docusaurus/preset-classic": "3.5.2",
         "@mdx-js/react": "^3.0.0",
         "clsx": "^2.0.0",
         "prism-react-renderer": "^2.3.0",
@@ -21,10 +21,10 @@
         "react-dom": "^18.0.0"
     },
     "devDependencies": {
-        "@docusaurus/module-type-aliases": "3.6.3",
-        "@docusaurus/tsconfig": "3.6.3",
-        "@docusaurus/types": "3.6.3",
-        "typescript": "5.7.2"
+        "@docusaurus/module-type-aliases": "3.5.2",
+        "@docusaurus/tsconfig": "3.5.2",
+        "@docusaurus/types": "3.5.2",
+        "typescript": "~5.5.2"
     },
     "engines": {
         "node": ">=18.0"
